fix strange text issue with fonts... align text (work in progress)

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -7,8 +7,6 @@ main .carousel {
   scroll-snap-type: x mandatory;
   overflow: scroll hidden;
   scroll-behavior: smooth;
-  /*max-width: 1680px;*/
-  /*margin: auto;*/
 }
 
 main .carousel picture {
@@ -42,14 +40,24 @@ main .carousel div.carousel-text {
   max-width: 1200px;
   margin: 0 auto;
   color: white;
-  /*background-color: white;*/
   min-height: 188px;
   padding: 0 28px;
+  text-align: center;
 }
 
 main .carousel div.carousel-text p {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0;
   margin: 10px 0 16px;
-  line-height: 1.2;
+  line-height: 24px;
+}
+
+main .carousel div.carousel-text h1 {
+  font-weight: 700;
+  font-size: 54px;
+  line-height: 60px;
+  letter-spacing: .3px;
 }
 
 main .carousel div.carousel-text h2 {
@@ -58,11 +66,24 @@ main .carousel div.carousel-text h2 {
 }
 
 main .carousel div.carousel-text h3 {
-  display: flex;
+  letter-spacing: .3px;
+  line-height: 32px;
+  font-weight: 300;
+  font-size: 40px;
+  text-align: center !important;
 }
 
 main .carousel div.carousel-text .button {
   margin: 0;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 1px;
+  text-align: center;
+  text-transform: uppercase;
+  word-break: break-word;
+  background-color: #3da556;
 }
   
 
