--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,9 @@
   --text-color: #000;
 
   /* fonts */
-  --body-font-family: 'Allianz Neo', roboto, roboto-fallback;
+  --body-font-family: 'Allianz Neo', sans-serif, roboto, roboto-fallback;
   --heading-font-family: var(--body-font-family);
-  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+  --fixed-font-family: 'Allianz Neo', sans-serif, menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -62,7 +62,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-Regular.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-Regular.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-Regular.woff2") format("woff2"),url("../fonts/AllianzNeoW04-Regular.woff") format("woff")
 }
 
 @font-face {
@@ -70,7 +70,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-Italic.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-Italic.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-Italic.woff2") format("woff2"),url("../fonts/AllianzNeoW04-Italic.woff") format("woff")
 }
 
 @font-face {
@@ -78,7 +78,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-SemiBold.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-SemiBold.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-SemiBold.woff2") format("woff2"),url("../fonts/AllianzNeoW04-SemiBold.woff") format("woff")
 }
 
 @font-face {
@@ -86,7 +86,7 @@
     font-style: italic;
     font-weight: 600;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-SemiBoldIt.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-SemiBoldIt.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-SemiBoldIt.woff2") format("woff2"),url("../fonts/AllianzNeoW04-SemiBoldIt.woff") format("woff")
 }
 
 @font-face {
@@ -94,7 +94,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-Bold.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-Bold.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-Bold.woff2") format("woff2"),url("../fonts/AllianzNeoW04-Bold.woff") format("woff")
 }
 
 @font-face {
@@ -102,7 +102,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url("../fonts/AllianzNeoW04-BoldItalic.woff2") format("woff2"),ur"../fonts/AllianzNeoW04-BoldItalic.woff"ff) format("woff")
+    src: url("../fonts/AllianzNeoW04-BoldItalic.woff2") format("woff2"),url("../fonts/AllianzNeoW04-BoldItalic.woff") format("woff")
 }
 
 @media (min-width: 900px) {
